@@ -5,6 +5,8 @@
 #include "minorGems/game/doublePair.h"
 #include "minorGems/game/gameGraphics.h"
 
+#include "ColorScheme.h"
+
 
 // base class
 class BorderSprite {
@@ -19,7 +21,8 @@ class BorderSprite {
         
         virtual void draw( doublePair inPosition, double inFade = 1 );
 
-        
+        virtual ColorScheme getColors() = 0;
+
 
     protected:
         
